--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "prepare": "lint-staged",
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass -w src/resources/scss/ -o src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,13 +24,19 @@
     "url": "https://github.com/heloqua1103/nodejs_blog/issues"
   },
   "homepage": "https://github.com/heloqua1103/nodejs_blog#readme",
+  "lint-staged": {
+    "\"src/**/*.{js,json,scss}\"": "prettier --single-quote --trailing-comma all --write"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "morgan": "^1.10.0",
     "node-sass": "^8.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.0"
   }
 }
