--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/heloqua1103/nodejs_blog#readme",
   "lint-staged": {
-    "\"src/**/*.{js,json,scss}\"": "prettier --single-quote --trailing-comma all --write"
+    "\"src/**/*.{js,json,scss}\"": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "dependencies": {
     "express": "^4.18.2",
